--- a/src/App.css
+++ b/src/App.css
@@ -91,7 +91,8 @@ a{
 }
 
 .active {
-  border: solid 1.2px #685e5e;
+  border: solid 0.075rem #685e5eb3;
+  border-radius: 0.25rem;
 }
 
 
@@ -121,6 +122,7 @@ a{
   height: 2.4rem;
   font-weight: 500;
   margin-right: 2rem;
+  cursor: pointer;
 }
 
 
