--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,7 @@ a{
   }
 }
 
+
 .navbar {
   position: fixed !important;
   width: 100%;
@@ -145,27 +146,23 @@ a{
   background: #e6eaed;
   padding-top: 3.5rem;
   padding-bottom: 2rem;
+  list-style: 1.75rem;
 }
 
-.container_title h3 {
-  font-size: 2.5rem;
+.container_title h2 {
   text-align: center;
   width: 80%;
   margin: 0 auto;
   text-transform: uppercase;
 }
 
-.container_title h4 {
-  text-transform: uppercase;
-  font-size: 2.3rem;
-  margin-bottom: 1rem;
-}
+
 
 .container_title p {
   font-size: 1.3rem;
   width: 95%;
-  margin: 0 auto;
   font-weight: 500;
+  margin: 0.5rem auto;
 }
 
 /* ESCUDOS */
@@ -220,21 +217,5 @@ a{
   font-size: 0.8rem;
 }
 
-@media only screen and (max-width: 450px) {
-  html,body{
-    font-size: 6px;
-  }
-}
-
-@media only screen and (max-width: 590px) {
-  html,body{
-    font-size: 8px;
-  }
-}
 
 
-@media only screen and (max-width: 750px) {
-  html,body{
-    font-size: 14px;
-  }
-}
