--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -13,12 +13,13 @@
   position: relative;
   z-index: 1;
   top: 32rem;
+  height: 16rem;
 }
 
 .headerTitle {
   background-color: #f2f1f1;
   position: relative;
-  width: 41rem;
+  max-width: 41rem;
   padding: 1.5rem;
   margin: 0 auto;
   border-radius: 0.25rem;
@@ -62,14 +63,20 @@
   justify-content: space-between;
   align-items: center;
 }
+.wsp-container{
+  width: 100%;
+    position: fixed;
+    display: flex;
+    justify-content: flex-end;
+    padding: 1rem;
+    z-index: 1;
+}
 
 .wsp_btn {
   border-radius: 50%;
   height: 4.0625rem;
   position: relative;
-  right: -38rem;
   box-shadow: 0.125rem 0.125rem 0.3125rem;
-  z-index: 1;
 }
 
 .container_cards {
