--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ a{
   text-align: center;
 }
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -34,7 +34,7 @@ a{
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
 .App-header {
   /*   background-color: #282c34;
@@ -48,7 +48,7 @@ a{
   color: white;
 }
 
-.App-link {
+/* .App-link {
   color: #61dafb;
 }
 
@@ -59,7 +59,7 @@ a{
   to {
     transform: rotate(360deg);
   }
-}
+} */
 
 
 .navbar {
@@ -78,7 +78,7 @@ a{
 
 .navbar ul {
   list-style: none;
-  padding-left: 4.5rem;
+  /* padding-left: 4.5rem; */
 }
 
 .navmenu {
@@ -101,20 +101,22 @@ a{
   display: flex;
   list-style: none;
   justify-content: flex-end;
-  padding-right: 4rem;
-  padding-left: 0rem;
+  padding-right: 0.5rem;
+  padding-left: 0.5rem;
   align-items: center;
+  flex-wrap: nowrap;
 }
 
 .navicons li {
-  padding: 0.7rem;
+  padding: 0.5rem;
+  font-size: 1.1rem;
 }
 
 .navicons-rg {
   margin-right: 4rem;
 }
 
-.langbt {
+/* .langbt {
   background-color: #05291d;
   color: #fff;
   border-radius: 0.375rem;
@@ -124,7 +126,7 @@ a{
   font-weight: 500;
   margin-right: 2rem;
   cursor: pointer;
-}
+} */
 
 
 .circle {
