--- a/src/App.css
+++ b/src/App.css
@@ -216,7 +216,7 @@ a {
 
 .IconsContainer {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   margin: 0.5rem 0px 1.3rem;
 }
 
@@ -225,7 +225,7 @@ a {
 }
 .menuContainer_main {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-evenly;
   width: 16.875rem;
   text-align: initial;
 }
@@ -233,5 +233,6 @@ a {
 .menuContainer {
   display: flex;
   flex-direction: column;
-  font-size: 0.8rem;
+  font-size: 0.9rem;
+  font-weight: 500;
 }
