--- a/src/App.css
+++ b/src/App.css
@@ -102,6 +102,7 @@ a {
   padding-left: 0.5rem;
   align-items: center;
   flex-wrap: nowrap;
+  margin-right: 2rem;
 }
 
 .navicons li {
@@ -113,17 +114,14 @@ a {
   margin-right: 4rem;
 }
 
-/* .langbt {
-  background-color: #05291d;
-  color: #fff;
-  border-radius: 0.375rem;
-  width: 6rem;
-  font-size: 0.8rem;
-  height: 2.4rem;
-  font-weight: 500;
-  margin-right: 2rem;
-  cursor: pointer;
-} */
+.Cart{
+  font-size: 2rem;
+  margin-left: 1rem;
+  display: flex;
+  position: fixed;
+  right: 21px;
+  top: 2rem;
+}
 
 /* Section */
 
