--- a/src/styles/Medias.css
+++ b/src/styles/Medias.css
@@ -5,12 +5,18 @@
   
 } */
 
+@media (min-width: 1200px){
+  .navbar-expand-lg .navbar-toggler {
+    display: none;
+}
+}
+
 @media only screen and (max-width: 1078px){
   html,body{
     font-size: 14px;
   }
   .navbar-nav{
-    font-size: 0.8rem!important;
+    font-size: 0.8rem;
   }
 
   .navicons li {
@@ -23,9 +29,17 @@
 }
 }
 @media only screen and (max-width: 991px){
+
+   .nav-link{
+    font-size: 1.3rem;
+    padding: 1rem;
+  }
+
   html,body{
     font-size: 13px;
   }
+
+ 
 
   .navbar-collapse{
   background: #f8f9fa;
@@ -38,6 +52,12 @@
 
 .navicons{
   justify-content: center;
+  margin-top: 2rem;
+}
+
+.navicons li{
+  padding: 0.6rem;
+    font-size: 1.5rem;
 }
 
 .flecha1, .flecha2{
@@ -46,9 +66,15 @@
 }
 
 @media only screen and (max-width: 768px) {
+
+  .headerTitle{
+  transform: translate(0px, -46rem);
+}
   html,body{
     font-size: 12px;
   }
+
+
 }
 
 @media only screen and (max-width: 590px) {
@@ -59,6 +85,8 @@
   .flecha1, .flecha2{
   height: 5.3rem;
 }
+
+
 }
 
 
