--- a/src/styles/Galeria.css
+++ b/src/styles/Galeria.css
@@ -7,3 +7,92 @@
     width: 28rem;
     text-align: center;
 }
+
+
+/* Grid */
+
+.grid_galeria{
+    display: grid;
+    grid-template-rows: repeat(4,1fr) ;
+    grid-template-columns: repeat(4,1fr);
+    gap: 0.5rem;
+    
+
+}
+
+.grid_galeria img {
+
+   width: 100%;
+    height: 100%;
+    object-fit: cover; 
+    cursor: pointer;
+    transition: all 350ms ease;
+}
+
+.grid_galeria img:hover{
+    filter: opacity(.8);
+}
+
+
+
+.img1{
+    grid-row: 1/3;
+    grid-column: 1/3;
+}
+
+.img2{
+    grid-row: 1/2;
+    grid-column: 3/4;
+}
+
+.img3{
+    grid-row: 1/2;
+    grid-column: 4/5;
+}
+
+.img4{
+    grid-row: 2/3;
+    grid-column: 3/4;
+}
+
+.img5{
+    grid-row: 2/3;
+    grid-column: 4/5;
+}
+
+
+.img6{
+    grid-row: 3/4;
+    grid-column: 1/2;
+}
+
+.img7{
+    grid-row: 4/5;
+    grid-column: 1/2;
+}
+
+.img8{
+    grid-row: 3/5;
+    grid-column: 2/4;
+}
+
+.img9{
+    grid-row: 3/4;
+    grid-column: 4/5;
+}
+
+.img10{
+    grid-row: 4/5;
+    grid-column: 4/5;
+}
+
+.galeria_title{
+    margin-top: -17rem;
+    text-transform: uppercase;
+    margin-bottom: 3rem;
+}
+
+.galeria_title h2{
+    font-weight: 600;
+
+}
