--- a/src/styles/Galeria.css
+++ b/src/styles/Galeria.css
@@ -1,4 +1,60 @@
-.headerTitle_galeria{
+.hero_gal{
+    width: 100%;
+  height: 80vh;
+  top: 3rem;
+  position: relative;
+}
+
+.hero_gal::before {
+    content: "";
+    background: url("../assets/ush-am.jpg")
+      no-repeat center center/cover;
+    height: 90vh;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    filter: brightness(0.7);
+  
+  }
+  
+  .hero_gal::after {
+    content: "";
+    background: url("../assets/monta.png") no-repeat center center/cover;
+    width: 100%;
+    position: absolute;
+    z-index: 1;
+    height: 12rem;
+    left: 0;
+    bottom: -10.375rem;
+  }
+  
+  .heroContent_container_gal {
+    height: 100%;
+  
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: auto;
+  }
+  
+  .heroContent_gal {
+    max-width: 41rem;
+    padding: 1.5rem;
+    margin: 0 auto;
+    color: #fff;
+    width: 28rem;
+    text-align: center;
+  }
+  
+
+
+
+
+
+
+/* .headerTitle_galeria{
     max-width: 41rem;
     padding: 1.5rem;
     margin: 0 auto;
@@ -6,7 +62,7 @@
     color: #fff;
     width: 28rem;
     text-align: center;
-}
+} */
 
 
 /* Grid */
@@ -87,12 +143,13 @@
 }
 
 .galeria_title{
-    margin-top: -17rem;
+    margin-top: 17rem;
     text-transform: uppercase;
     margin-bottom: 3rem;
 }
 
 .galeria_title h2{
     font-weight: 600;
+    font-size: 2.5rem;
 
 }
