--- a/src/styles/Medias.css
+++ b/src/styles/Medias.css
@@ -1,13 +1,19 @@
-/* @media only screen and (max-width: 1200px){
+ @media only screen and (max-width: 1200px){
   html,body{
     font-size: 15px;
   }
   
-} */
+} 
+
+
 
 @media (min-width: 1200px) {
   .navbar-expand-lg .navbar-toggler {
     display: none;
+  }
+
+  .heroContent{
+    margin-top: 3rem;
   }
 }
 
@@ -39,6 +45,8 @@
   body {
     font-size: 13px;
   }
+
+ 
 
   .navbar-collapse {
     background: #f8f9fa;
@@ -92,6 +100,12 @@
   body {
     font-size: 10px;
   }
+
+
+
+  img.headerImg {
+    height: 70vh;
+}
 
   .flecha1,
   .flecha2 {
