--- a/src/styles/Nosotros.css
+++ b/src/styles/Nosotros.css
@@ -1,31 +1,77 @@
-.headerImg_Nos {
+.hero_Nos {
+  width: 100%;
+  height: 80vh;
+  top: 3rem;
+  position: relative;
+}
+
+.hero_Nos::before {
+  content: "";
+  background: url("https://destinopatagonia.com//wp-content/uploads/2021/10/2021-0626-DJI_0746-lrexport-1.jpg")
+    no-repeat center center/cover;
+  height: 90vh;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  filter: brightness(0.7);
+}
+
+
+.hero_Nos::after {
+  content: "";
+  background: url("../assets/monta.png") no-repeat center center/cover;
+  width: 100%;
+  position: absolute;
+  z-index: 1;
+  height: 12rem;
+  left: 0;
+  bottom: -10.375rem;
+}
+
+.heroContent_container_Nos {
+  height: 100%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: auto;
+}
+
+
+
+/* .headerImg_Nos {
   filter: brightness(0.7);
 
   width: 100%;
   height: 100vh;
   object-fit: cover;
-/*   position: absolute;
- */}
+ 
+} */
 
-.headerImg2_Nos {
+
+
+
+/* .headerImg2_Nos {
   width: 100%;
-/*   position: relative;
- */  z-index: 1;
+    position: relative;
+ 
+  z-index: 1;
   top: 30rem;
   height: 15rem;
-  transform: translate(0px, -7rem);  
-}
-.headerLogo {
-/*   position: relative;
- */  margin: 0 auto;
- transform: translateY(-44rem);
-}
+  transform: translate(0px, -7rem);
+} */
+
+
+
+
 
 .containerNos {
   height: 14rem;
-  margin-top: -17rem;
+  margin-top: 14rem;
 }
-.containerNos h2{
+.containerNos h2 {
   font-size: 3rem;
 }
 
@@ -85,7 +131,7 @@
   text-align: justify;
   padding: 0.5rem;
   line-height: 1.625rem;
-  list-style:none;
+  list-style: none;
 }
 
 .containerNos_vision_b li {
