--- a/src/App.css
+++ b/src/App.css
@@ -158,7 +158,7 @@ a {
   justify-content: center;
   flex-wrap: wrap;
   align-items: center;
-  transform: translateY(4rem);
+  margin-bottom: 8rem;
 }
 
 .escudos img {
@@ -171,10 +171,23 @@ a {
 /* Footer */
 
 .footerContainer {
-  position: absolute;
+  position: relative;
+    margin-top: 6rem;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    padding-top: 3rem;
+}
 
-  background: #002569;
+.footerContainer::before{
+  content: '';
+  background: url('./assets/olas3.png') no-repeat center center/cover;
   width: 100%;
+  position: absolute;
+  z-index: -1;
+  height: 25rem;
+  left: 0;
 }
 
 .footerContainer li {
@@ -188,7 +201,7 @@ a {
   color: #e6eaed;
   /*   top: 13.75rem;
  */
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   margin: 0rem;
 }
 
