--- a/src/styles/Cart.css
+++ b/src/styles/Cart.css
@@ -34,4 +34,22 @@
   align-items: center;
   justify-content: center;
   color: #fff;
+  animation: shake 3s infinite;
+
+
+}
+
+@keyframes shake {
+  10% {
+    transform: scale(1.05) rotate(3deg);
+  }
+  20% {
+    transform: scale(1.05) rotate(-3deg);
+  }
+  30% {
+    transform:  rotate(5deg);
+  }
+  40% {
+    transform: translateY(1px);
+  }
 }
