--- a/src/styles/Servicios.css
+++ b/src/styles/Servicios.css
@@ -30,10 +30,10 @@
 }
 
 .heroContent_container_svs {
-  height: 60%;
-  display: flex;
-  flex-direction: column;
-  justify-content: end;
+  height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 .heroContent_svs {
