--- a/src/styles/Servicios.css
+++ b/src/styles/Servicios.css
@@ -51,14 +51,14 @@
   padding: 1.5rem;
   margin: 0 auto;
   color: #fff;
-  width: 31rem;
+  width: 40rem;
   text-align: center;
   background: #f1f1f126;
   border-radius: 10px;
 }
 
 .headerTitle_a_svs {
-  font-size: 2.5rem;
+  font-size: 3.5rem;
   text-transform: uppercase;
   text-shadow: 0.125rem 0.0625rem 0.125rem #787171f5;
 }
@@ -66,7 +66,7 @@
 .headerTitle_b_svs {
   font-family: "Montez", cursive;
   text-transform: capitalize;
-  font-size: 3.5rem;
+  font-size: 5rem;
 }
 
 .btn_svs {
@@ -86,15 +86,16 @@
   height: 35%;
   border-radius: 0.3125rem;
   flex-wrap: nowrap;
+  margin-top: 4rem;
 }
 
-.btn-search{
-   background-color: #002669;
-    margin: 0.5rem;
+.btn-search {
+  background-color: #002669;
+  margin: 0.5rem;
 }
 
-.btn-search:hover{
-background-color: rgba(0, 39, 105, 0.8);
+.btn-search:hover {
+  background-color: rgba(0, 39, 105, 0.8);
 }
 
 .card-body {
@@ -114,6 +115,9 @@ background-color: rgba(0, 39, 105, 0.8);
 
 .card-svs {
   cursor: pointer;
+  cursor: pointer;
+  margin-right: 1.5rem;
+  margin-top: 2.5rem;
 }
 
 .card-svs:hover {
@@ -124,12 +128,11 @@ background-color: rgba(0, 39, 105, 0.8);
 .itemContainer > h1 {
   font-size: 3rem;
   font-weight: 700;
-  text-transform: uppercase;
 }
 
 .itemContainer p {
   font-size: 2rem;
-  color: rgb(247, 34, 34);
+  color: var(--blue1-color);
   font-weight: 700;
 }
 
