--- a/src/styles/Servicios.css
+++ b/src/styles/Servicios.css
@@ -155,3 +155,12 @@
 .dropdw-svs:hover {
   background: #628bb6;
 }
+
+
+.card-body-column{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 0.2rem;
+}
