--- a/src/styles/Galeria.css
+++ b/src/styles/Galeria.css
@@ -67,6 +67,70 @@
 
 /* Grid */
 
+.gallery{
+    -webkit-column-count: 3;
+    -moz-column-count: 3;
+    column-count: 3;
+    column-width: 30%;
+    -webkit-column-width: 30%;
+    -moz-column-width: 30%;
+    padding: 0 10px;
+    width: 70%;
+    margin: 0 auto;
+    margin-bottom: 3.125rem;
+}
+
+.gallery .pics{
+    cursor: pointer;
+    padding: 0.3rem;
+    -webkit-transition: all 350ms ease;
+
+    transition: all 350ms ease;
+    margin: 0.4rem;
+    width: 100%;
+    height: 100%;
+}
+.gallery .pics:hover{
+    filter: opacity(0.6);
+}
+
+.model{
+    width:100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #002568;
+    transition: opacity .4s ease, visibility .4s ease, transform .5s ease-in-out;
+    visibility: hidden;
+    opacity: 0;
+    transform: scale(0);
+    overflow: hidden;
+    z-index: 999;
+
+}
+
+.model.open {
+    visibility: visible;
+    opacity: 1;
+    transform: scale(1);
+
+}
+
+.model img{
+    width: 70%;
+    max-width: 100%;
+    height: auto;
+    display: block;
+    line-height: 0;
+    box-sizing: border-box;
+    padding: 20px 0 20px;
+    margin: 0 auto;
+}
+
 .grid_galeria{
     display: grid;
     grid-template-rows: repeat(4,1fr) ;
@@ -152,4 +216,25 @@
     font-weight: 600;
     font-size: 2.5rem;
 
+}
+
+@media (max-width:991px){
+    .gallery{
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
+    column-count: 2;
+    
+}
+}
+
+@media (max-width:480px){
+    .gallery{
+    -webkit-column-count: 1;
+    -moz-column-count: 1;
+    column-count: 1;
+    column-width: 100%;
+    -webkit-column-width: 100%;
+    -moz-column-width: 100%;
+    
+}
 }
