--- a/src/styles/ItemDetail.css
+++ b/src/styles/ItemDetail.css
@@ -2,10 +2,15 @@
 text-transform: uppercase;
 }
 
+.cont_details_main{
+  display: flex;
+  flex-direction: column;
+}
+
 .cont_details{
   display: inline-flex;
     align-items: baseline;
-    gap: 1.3rem;
+    gap: 0.6rem;
 }
 
 .cont_details h6{
@@ -32,6 +37,7 @@ text-transform: uppercase;
 
 .container-grid-img img:first-child{
   grid-column: span 3;
+  grid-row: span 2;
 
 }
 
