--- a/src/styles/Servicios.css
+++ b/src/styles/Servicios.css
@@ -102,6 +102,7 @@
   display: flex;
   justify-content: space-between;
   gap: 1rem;
+  vertical-align: baseline;
 }
 
 .container-ExcSearch{
@@ -127,6 +128,7 @@
   cursor: pointer;
   margin-right: 1.5rem;
   margin-top: 2.5rem;
+  height: 20rem;
 }
 
 .card-svs:hover {
