--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -39,15 +39,17 @@
   display: flex;
   justify-content: space-evenly;
   margin: 0.5rem 0px 1.3rem;
+  padding: 0;
 }
 
 .IconsContainer li {
   padding: 0.5rem;
+  font-size: 1.1rem;
 }
 
 
 .IconsContainer li:hover{
-  transform: scale(1.1);
+  transform: scale(1.15);
 }
 
 .IconsContainer li a:hover{
