cambios en nosotros y contacto

--- a/src/styles/Nosotros.css
+++ b/src/styles/Nosotros.css
@@ -86,7 +86,7 @@
 }
 
 .containerNos_vision_a h5 {
-  font-size: 2.4rem;
+  font-size: 2rem;
   font-weight: 400;
 }
 
@@ -99,7 +99,15 @@
 }
 
 .containerNos_vision_b h5 {
-  font-size: 1.5rem;
+  font-size: 2rem;
+}
+
+.containerNos_vision_b p {
+  text-align: justify;
+  font-weight: 500;
+  font-size: 1.1rem;
+  padding: 0.5rem;
+  line-height: 2rem;
 }
 
 .containerNos_vision_b ul {
