--- a/src/styles/Formulario.css
+++ b/src/styles/Formulario.css
@@ -77,9 +77,9 @@
   
   .formulario .exito {
     text-align: center;
-    font-size: 0.91rem;
+    font-size: 1rem;
     padding-top: 1.25rem;
-    color: #02a802;
+    color: #002569;
   }
   
   .formulario input[type="radio"] {
