--- a/src/styles/Nosotros.css
+++ b/src/styles/Nosotros.css
@@ -18,7 +18,7 @@
   filter: brightness(0.7);
 }
 
-
+/*
 .hero_Nos::after {
   content: "";
   background: url("../assets/monta.png") no-repeat center center/cover;
@@ -29,6 +29,7 @@
   left: 0;
   bottom: -10.375rem;
 }
+*/
 
 .heroContent_container_Nos {
   height: 100%;
