--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -1,15 +1,24 @@
 .hero {
   width: 100%;
   height: 80vh;
-  top: 3rem;
+  top: 7rem;
   position: relative;
+}
+
+.tresTextosInicio{
+text-align: center; 
+width: auto; 
+margin: auto;    
+color: white;   
+font-size: 17px;
+font-weight: bold
 }
 
 .hero::before {
   content: "";
   background: url("../assets/Portada-SERVICIOS.png")
     no-repeat center center/cover;
-  height: 90vh;
+  height: 80vh;
   width: 100%;
   position: absolute;
   top: 0;
@@ -49,3 +58,18 @@
 }
 
 .slick-track { 	display: flex !important; }  .slick-slide { 	height: inherit !important; 	display: flex !important; 	justify-content: center; 	align-items: center; }
+
+@media only screen and (min-width:1024px) {
+  .hero {
+    width: 100%;
+    height: 80vh;
+    top: 7rem;
+    position: relative;
+  }
+
+  .tresTextosInicio{
+    width: auto;  
+    font-size: 40px;
+    }
+  
+}
